# Tenta

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  compose.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
audit-/: PRD.md
benchmarks/: README.md
compiler/: README.md
controller/: README.md
dashboard/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: App.tsx  ErrorBoundary.tsx  Shell.tsx  api.ts  components.tsx  governance.tsx  hooks.ts  lib.ts  main.tsx  router.tsx  styles.css  vite-env.d.ts
docs/: README.md
docs/algorithms/: 05-self-healing-engine.md  07-drift-detection.md  08-online-learning.md
docs/api/: 12-api-reference.md
docs/architecture/: 02-system-architecture.md  03-runtime-engine.md  03a-timber-compiler.md  06-memory-system.md  09-policy-engine.md  13-database-schema.md
docs/deployment/: 14-kubernetes.md  15-security.md  16-testing.md  17-deployment.md
docs/design/: 01-problem-statement.md  04-model-wrapper.md
docs/research/: 18-roadmap.md  19-research.md
docs/sdk/: 11-plugin-sdk.md
docs/ui/: 10-ui-dashboard.md
docs/user-guide/: 00-overview.md
examples/: README.md  claims_triage_workload.json  decision-risk-v14.tenta.json  decision_request.json  postgres_provision.json
examples/artifacts/: decision-risk-v14.timber
plugins/: README.md
runtime/: README.md
sdk/: README.md
tests/: test_artifacts.py  test_audit_integrity.py  test_auth.py  test_control_plane_persistence.py  test_database_provisioning.py  test_examples.py  test_runtime_api.py  test_runtime_cli.py  test_runtime_engine.py  test_runtime_storage.py  test_runtime_storage_factory.py
(+37 files in other folders)
