[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tenta"
version = "0.1.0"
description = "Decision Runtime for governing high-stakes machine learning in production."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "Kossiso Royce" }
]
keywords = [
  "machine-learning",
  "mlops",
  "decision-engine",
  "model-governance",
  "audit",
  "drift-detection",
  "risk",
  "runtime"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]

[project.urls]
Homepage = "https://github.com/kossisoroyce/Tenta"
Documentation = "https://github.com/kossisoroyce/Tenta#readme"
Repository = "https://github.com/kossisoroyce/Tenta"
Issues = "https://github.com/kossisoroyce/Tenta/issues"

[project.scripts]
tenta = "tenta_runtime.cli:main"

[tool.setuptools]
package-dir = { "" = "runtime" }

[tool.setuptools.packages.find]
where = ["runtime"]
include = ["tenta_runtime*"]

[tool.setuptools.package-data]
tenta_runtime = ["workload_packs/*.json", "replay_fixtures/*.json"]
